--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,9 @@
 
 {% block conteudo %}
     <div class="texto_pagina_principal">
-        <p>Este site serve para divulgar o <strong>NSI TECH TALKS</strong>, evento realizado periodicamente pelo NSI (Núcleo de Pesquisa em Sistemas de Informação) do IFF.</p>
-        <p>O evento conta com palestras de membros e ex-membros do NSI, e tem, como objetivo principal, fazer circular o conhecimento dentro do NSI.</p>
-        <p>Apesar de ter como foco os integrantes do NSI, o evento também é aberto à comunidade, com o intuito de aumentar a disseminação do conhecimento</p>
+        <!--<p>Este site serve para divulgar o <strong>NSI TECH TALKS</strong>, evento realizado periodicamente pelo NSI (Núcleo de Pesquisa em Sistemas de Informação) do IFF.</p>-->
+        <!--<p>O evento conta com palestras de membros e ex-membros do NSI, e tem, como objetivo principal, fazer circular o conhecimento dentro do NSI.</p>-->
+        <!--<p>Apesar de ter como foco os integrantes do NSI, o evento também é aberto à comunidade, com o intuito de aumentar a disseminação do conhecimento</p>-->
+        {% include "edicao_em_destaque.html" %}
     </div>
 {% endblock conteudo %}
