--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -20,13 +20,10 @@
                         <a href="/">Página Inicial</a>
                     </li>
                     <li>
-                        <a href="#">Programação</a>
+                        <a href="#">Anteriores</a>
                     </li>
                     <li>
                         <a href="#">Fotos</a>
-                    </li>
-                    <li>
-                        <a href="#">Local</a>
                     </li>
                     <li>
                         <a href="#">Contato</a>
@@ -35,8 +32,8 @@
                         <a href="#">Equipe</a>
                     </li>
                 </ul>
-                <div class="cantoE"></div>
-                <div class="cantoD"></div>
+                <!--<div class="cantoE"></div>-->
+                <!--<div class="cantoD"></div>-->
             </div>
             <div class="conteudo">
                 {% block conteudo %}
