--- a/templates/edicao_em_destaque.html
+++ b/templates/edicao_em_destaque.html
@@ -1,8 +1,6 @@
 <link type="text/css" href="{{ MEDIA_URL }}/estilo/ui/themes/base/jquery.ui.all.css" rel="stylesheet" />
 <script type="text/javascript" src="{{ MEDIA_URL }}/javascripts/jquery-1.4.2.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}/javascripts/ui/jquery.ui.core.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}/javascripts/ui/jquery.ui.widget.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}/javascripts/ui/jquery.ui.accordion.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}/javascripts/ui/jquery-ui-1.8.2.custom.js"></script>
 <script type="text/javascript">
 	$(function() {
 		$("#edicao_em_destaque").accordion(
