--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br" lang="pt-br">
 <head>
     <title>..:: NSI TECH TALKS - {% block titulo_pagina %}{% endblock titulo_pagina%} ::..</title>
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL}}/estilo/estilo_base.css"/>
@@ -23,7 +23,7 @@
                         <a href="/">Página Inicial</a>
                     </li>
                     <li>
-                        <a href="#">Anteriores</a>
+                        <a href="/anteriores">Anteriores</a>
                     </li>
                     <li>
                         <a href="#">Fotos</a>
