--- a/site_media/estilo/detalhes_palestrante.css
+++ b/site_media/estilo/detalhes_palestrante.css
@@ -1,3 +1,16 @@
 #detalhes_palestrante {
-    margin: 10px;
+    margin: 20px;
+}
+
+#foto_palestrante {
+    width: 140px;
+    height: 140px;
+    float: left;
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+
+#foto_palestrante img {
+    width: 140px;
+    height: 140px;
 }
