--- a/techtalks/templates/detalhes_palestrante.html
+++ b/techtalks/templates/detalhes_palestrante.html
@@ -11,8 +11,14 @@
         <div id="foto_palestrante">
             <img src="{{ MEDIA_URL}}/{{ palestrante.foto }}" />
         </div>
-        Nome: {{ palestrante.nome }}<br/>
-        O que faz: {{ palestrante.o_que_faz }}<br/>
-        Resumo da obra e vida: {{ palestrante.resumo }}<br/>
+        <div id="infos_palestrante">
+            <div>Nome: {{ palestrante.nome }}</div>
+            <div>O que faz: {{ palestrante.o_que_faz }}</div>
+            <div>Resumo da vida e obra: {{ palestrante.resumo }}</div>
+            <div>Site: <a href="{{ palestrante.site }}">{{ palestrante.site }}</a></div>
+            <div>github: <a href="{{ palestrante.github }}">{{ palestrante.github }}</a></div>
+            <div>Twitter: <a href="{{ palestrante.twitter }}">{{ palestrante.twitter }}</a></div>
+            <div>Slideshare: <a href="{{ palestrante.slideshare }}">{{ palestrante.slideshare }}</a></div>
+        </div>
     </div>
 {% endblock conteudo %}
