--- a/techtalks/templates/edicao_em_destaque.html
+++ b/techtalks/templates/edicao_em_destaque.html
@@ -1,4 +1,5 @@
 <link type="text/css" href="{{ MEDIA_URL }}/estilo/ui/themes/base/jquery.ui.all.css" rel="stylesheet" />
+<link type="text/css" href="{{ MEDIA_URL }}/estilo/edicao_em_destaque.css" rel="stylesheet" />
 <script type="text/javascript" src="{{ MEDIA_URL }}/javascripts/jquery-1.4.2.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}/javascripts/ui/jquery-ui-1.8.2.custom.js"></script>
 <script type="text/javascript">
@@ -36,7 +37,7 @@
 				<div class="palestra_aberta">
 					<div>
 						<div>Título: {{ palestra.titulo }}</div>
-						<div>Resumo: {{ palestra.resumo }}</div>
+						<div>Resumo: {{ palestra.resumo|linebreaksbr }}</div>
 						{% ifnotequal palestra.link_slideshare '' %}
 						<div>
 							Slides: <a href="{{ palestra.link_slideshare }}">{{ palestra.link_slideshare }}</a>
