--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="selo_django_powered">
                     <a href="http://www.djangoproject.com/">
-                        <img src="http://media.djangoproject.com/img/badges/djangopowered126x54.gif" style="border:0;width:61px;height:21px" alt="Powered by Django." title="Powered by Django." />
+                        <img src="{{ MEDIA_URL }}/imagens/djangopowered126x54.gif" style="border:0;width:61px;height:21px" alt="Powered by Django." title="Powered by Django." />
                     </a>
                 </div>
             </div>
