--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -19,7 +19,7 @@
                     </a>
                 </div>
                 <ul class="navegacao">
-                    <li>
+                    <li id="principal">
                         <a href="/">Página Inicial</a>
                     </li>
                     <li>
