Alterado id pouco expressivo(teste) da página e estilo de detalhe de palestrante

--- a/techtalks/templates/detalhes_palestrante.html
+++ b/techtalks/templates/detalhes_palestrante.html
@@ -8,7 +8,7 @@
 
 {% block conteudo %}
     <!--<h1>Detalhes do Palestrante</h1>-->
-    <div id="teste">Detalhes do Palestrante</div>
+    <div id="destaque_titulo">Detalhes do Palestrante</div>
     <div id="detalhes_palestrante">
         <div id="foto_palestrante">
             <img src="{{ MEDIA_URL}}/{{ palestrante.foto }}" />
