--- a/site_media/estilo/techtalks/anteriores.css
+++ b/site_media/estilo/techtalks/anteriores.css
@@ -6,3 +6,35 @@ ul a {
     color: #00923f;
     font-weight: bold;
 }
+
+.pagination {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 21px;
+    font-family: sans-serif, helvetica;
+}
+
+.pagination .prev,.pagination .next {
+    color:#00923f;
+}
+
+.pagination .page {
+    color:#00923f;
+    text-decoration: none;
+}
+
+.pagination .page:hover {
+    text-decoration: underline;
+}
+
+.pagination .current {
+    color:#00523f;
+}
+
+.pagination .current:hover {
+    text-decoration: none;
+}
+
+.pagination .disabled {
+    visibility: hidden;
+}
