Realizada algumas alterações de nomenclatura

--- a/site_media/estilo/techtalks/anteriores.css
+++ b/site_media/estilo/techtalks/anteriores.css
@@ -1,10 +1,14 @@
-ul {
+ul#anteriores {
     color: #00923f;
 }
 
-ul a {
+ul#anteriores a {
     color: #00923f;
     font-weight: bold;
+}
+
+ul#anteriores li {
+    padding-bottom: 5px;
 }
 
 .pagination {
