Mudanças pouco significativas

--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -26,13 +26,13 @@
                         <a href="/anteriores">Anteriores</a>
                     </li>
                     <li>
-                        <a href="#">Fotos</a>
+                        <a href="/">Fotos</a>
                     </li>
                     <li>
-                        <a href="#">Contato</a>
+                        <a href="/">Contato</a>
                     </li>
                     <li>
-                        <a href="#">Equipe</a>
+                        <a href="/">Equipe</a>
                     </li>
                 </ul>
                 <!--<div class="cantoE"></div>-->
@@ -46,8 +46,8 @@
             <div class="rodape">
                 NSI - IF Fluminense - Núcleo de Pesquisa em Sistemas de Informação
                 <div class="links_rodape">
-                    <a href="#">Equipe NSI</a> |
-                    <a href="#">Equipe do Site</a>
+                    <a href="/">Equipe NSI</a> |
+                    <a href="/">Equipe do Site</a>
                 </div>
                 <div class="selo_django_powered">
                     <a href="http://www.djangoproject.com/">
