Adicionado formulario de contatos

--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -29,7 +29,7 @@
                         <a href="/">Fotos</a>
                     </li>
                     <li>
-                        <a href="/">Contato</a>
+                        <a href="/contato">Contato</a>
                     </li>
                     <li>
                         <a href="/">Equipe</a>
