Adicionada regra esquecida

--- a/site_media/estilo/techtalks/detalhes_palestrante.css
+++ b/site_media/estilo/techtalks/detalhes_palestrante.css
@@ -7,6 +7,7 @@
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
+	border-radius:4px;
 }
 
 #infos_palestrante {
@@ -26,6 +27,7 @@
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
+	border-radius:4px;
     background-color: #00923f;
     color: #ffffff;
 }
@@ -69,4 +71,5 @@
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
+	border-radius:4px;
 }
