Adicionada página com a equipe do NSI

--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -29,10 +29,10 @@
                         <a href="/">Fotos</a>
                     </li>
                     <li>
-                        <a href="/contato">Contato</a>
+                        <a href="/contato/">Contato</a>
                     </li>
                     <li>
-                        <a href="/">Equipe</a>
+                        <a href="/equipe/">Equipe</a>
                     </li>
                 </ul>
                 <!--<div class="cantoE"></div>-->
@@ -46,7 +46,7 @@
             <div class="rodape">
                 NSI - IF Fluminense - Núcleo de Pesquisa em Sistemas de Informação
                 <div class="links_rodape">
-                    <a href="/">Equipe NSI</a> |
+                    <a href="/equipe/">Equipe NSI</a> |
                     <a href="/">Equipe do Site</a>
                 </div>
                 <div class="selo_django_powered">
