--- a/site_media/estilo/techtalks/detalhes_palestrante.css
+++ b/site_media/estilo/techtalks/detalhes_palestrante.css
@@ -3,7 +3,7 @@
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    background-color: #00923f;
+    border: 1px solid #00923f;
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
@@ -21,23 +21,28 @@
 }
 
 #infos_palestrante .info {
-    border: 1px solid #ffffff;
+    /*border: 1px solid #ffffff;*/
     margin-bottom: 3px;
     padding: 5px;
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
 	border-radius:4px;
-    background-color: #00923f;
-    color: #ffffff;
+    /*background-color: #00923f;*/
+    /*color: #ffffff;*/
+    color: #00923f;
 }
 
 #infos_palestrante .info a {
 	text-decoration: none;
-	color: #ffffff;
+	color: #00923f;
 }
 
 #infos_palestrante .info a:hover {
+	text-decoration: underline;
+}
+
+#infos_palestrante .info .titulo_info {
 	text-decoration: underline;
 }
 
